--- a/toppage.html
+++ b/toppage.html
@@ -9,6 +9,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <header>
+    <div id="title">
+      <h1>DevLog</h1>
+    </div>
+    <nav>
+      <ul>
+        <li><a href="#">PROFILE</a></li>
+        <li><a href="#">BLOG</a></li>
+        <li><a href="#">CONTACT</a></li>
+      </ul>
+    </nav>
+
+  </header>
 </body>
 </html>
