--- a/toppage.html
+++ b/toppage.html
@@ -7,20 +7,22 @@
   <title>DevLog｜Sohのエンジニアブログ</title>
   <link rel="stylesheet" href="css/destyle.css">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <div id="title">
-      <h1>DevLog</h1>
+    <div class="container">
+      <div class="leftcol">
+        <h1>DevLog</h1>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="#">PROFILE</a></li>
+          <li><a href="#">BLOG</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
+      </nav>
     </div>
-    <nav>
-      <ul>
-        <li><a href="#">PROFILE</a></li>
-        <li><a href="#">BLOG</a></li>
-        <li><a href="#">CONTACT</a></li>
-      </ul>
-    </nav>
-
   </header>
 </body>
 </html>
