[update]コンタクトエリア完成 #3

--- a/toppage.html
+++ b/toppage.html
@@ -8,21 +8,38 @@
   <link rel="stylesheet" href="css/destyle.css">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/879fc12ee5.js"></script>
+
 </head>
 <body>
   <header>
     <div class="container">
-      <div class="leftcol">
+      <div id="logo" class="leftcol">
         <h1>DevLog</h1>
       </div>
-      <nav>
-        <ul>
-          <li><a href="#">PROFILE</a></li>
-          <li><a href="#">BLOG</a></li>
-          <li><a href="#">CONTACT</a></li>
-        </ul>
-      </nav>
+      <div id="nav">
+        <nav>
+          <ul>
+            <li><a href="#">PROFILE</a></li>
+            <li><a href="#">BLOG</a></li>
+            <li><a href="#">CONTACT</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </header>
+
+  <footer>
+    <div class="container">
+      <div id="contact" class="center">
+        <h2>CONTACT</h2>
+        <ul>
+          <li class="twitter"><a href="#"><i class="fab fa-twitter"></i></a></li>
+          <li class="facebook"><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+          <li class="github"><a href="#"><i class="fab fa-github"></i></a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
