--- a/toppage.html
+++ b/toppage.html
@@ -29,17 +29,18 @@
     </div>
   </header>
 
-  <footer>
-    <div class="container">
-      <div id="contact" class="center">
-        <h2>CONTACT</h2>
-        <ul>
-          <li class="twitter"><a href="#"><i class="fab fa-twitter"></i></a></li>
-          <li class="facebook"><a href="#"><i class="fab fa-facebook-square"></i></a></li>
-          <li class="github"><a href="#"><i class="fab fa-github"></i></a></li>
-        </ul>
-      </div>
+  <div class="container">
+    <div id="contact" class="center">
+      <h2>CONTACT</h2>
+      <ul>
+        <li class="twitter"><a href="#"><i class="fab fa-twitter"></i></a></li>
+        <li class="facebook"><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+        <li class="github"><a href="#"><i class="fab fa-github"></i></a></li>
+      </ul>
     </div>
+  </div>
+  <footer>
+    <small class="abel uppercase">&copy; Soichi SATO, All Rights Reserved.</small>
   </footer>
 </body>
 </html>
