[update]トップ画像を設置 #12

--- a/toppage.html
+++ b/toppage.html
@@ -30,6 +30,10 @@
   </header>
 
   <div class="container">
+    <div id="toppic">
+      <div class="sample"></div>
+      <!-- <img src="images/top-pc.png" alt="" /> -->
+    </div>
     <div id="contact" class="center">
       <h2>CONTACT</h2>
       <ul>
