--- a/toppage.html
+++ b/toppage.html
@@ -29,12 +29,19 @@
     </div>
   </header>
 
-  <div class="container">
+  <main class="container center">
     <div id="toppic">
       <div class="sample"></div>
       <!-- <img src="images/top-pc.png" alt="" /> -->
     </div>
-    <div id="contact" class="center">
+    <div id="skills">
+      <h2>SKILL</h2>
+      <section id="html"></section>
+      <section id="javascript"></section>
+      <section id="python"></section>
+      <section id="aws"></section>
+    </div>
+    <div id="contact">
       <h2>CONTACT</h2>
       <ul>
         <li class="twitter"><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -42,7 +49,7 @@
         <li class="github"><a href="#"><i class="fab fa-github"></i></a></li>
       </ul>
     </div>
-  </div>
+  </main>
   <footer>
     <small class="abel uppercase">&copy; Soichi SATO, All Rights Reserved.</small>
   </footer>
