--- a/toppage.html
+++ b/toppage.html
@@ -30,25 +30,41 @@
   </header>
 
   <main class="container center">
-    <div id="toppic">
+    <section id="toppic">
       <div class="sample"></div>
       <!-- <img src="images/top-pc.png" alt="" /> -->
-    </div>
-    <div id="skills">
+    </section>
+    <section id="skills">
       <h2>SKILL</h2>
-      <section id="html"></section>
-      <section id="javascript"></section>
-      <section id="python"></section>
-      <section id="aws"></section>
-    </div>
-    <div id="contact">
+      <div class="skill-box">
+        <i class="fab fa-html5"></i>
+        <h3>HTML/CSS</h3>
+        <p>あああああああああああ</p>
+      </div>
+      <div class="skill-box">
+        <i class="fab fa-js"></i>
+        <h3>JavaScript</h3>
+        <p>あああああああああああ</p>
+      </div>
+      <div class="skill-box">
+        <i class="fab fa-python"></i>
+        <h3>Python</h3>
+        <p>あああああああああああ</p>
+      </div>
+      <div class="skill-box">
+        <i class="fab fa-aws"></i>
+        <h3>AWS</h3>
+        <p>あああああああああああ</p>
+      </div>
+    </section>
+    <section id="contact">
       <h2>CONTACT</h2>
       <ul>
         <li class="twitter"><a href="#"><i class="fab fa-twitter"></i></a></li>
         <li class="facebook"><a href="#"><i class="fab fa-facebook-square"></i></a></li>
         <li class="github"><a href="#"><i class="fab fa-github"></i></a></li>
       </ul>
-    </div>
+    </section>
   </main>
   <footer>
     <small class="abel uppercase">&copy; Soichi SATO, All Rights Reserved.</small>
