[update]スキルエリア終了 #4

--- a/toppage.html
+++ b/toppage.html
@@ -36,25 +36,27 @@
     </section>
     <section id="skills">
       <h2>SKILL</h2>
-      <div class="skill-box">
-        <i class="fab fa-html5"></i>
-        <h3>HTML/CSS</h3>
-        <p>あああああああああああ</p>
-      </div>
-      <div class="skill-box">
-        <i class="fab fa-js"></i>
-        <h3>JavaScript</h3>
-        <p>あああああああああああ</p>
-      </div>
-      <div class="skill-box">
-        <i class="fab fa-python"></i>
-        <h3>Python</h3>
-        <p>あああああああああああ</p>
-      </div>
-      <div class="skill-box">
-        <i class="fab fa-aws"></i>
-        <h3>AWS</h3>
-        <p>あああああああああああ</p>
+      <div class="skill-container">
+        <div class="skill-box">
+          <i class="fab fa-html5"></i>
+          <h3>HTML/CSS</h3>
+          <p>一二三四五六七八九一一二三四五六七八九二一二三四五六七八九三</p>
+        </div>
+        <div class="skill-box">
+          <i class="fab fa-js"></i>
+          <h3>JavaScript</h3>
+          <p>１２３４５６７８９１１２３４５６７８９２１２３４５６７８９３</p>
+        </div>
+        <div class="skill-box">
+          <i class="fab fa-python"></i>
+          <h3>Python</h3>
+          <p>１２３４５６７８９１１２３４５６７８９２１２３４５６７８９３</p>
+        </div>
+        <div class="skill-box">
+          <i class="fab fa-aws"></i>
+          <h3>AWS</h3>
+          <p>１２３４５６７８９１１２３４５６７８９２１２３４５６７８９３</p>
+        </div>
       </div>
     </section>
     <section id="contact">
