[update]ポートフォリオhtml #5

--- a/toppage.html
+++ b/toppage.html
@@ -35,7 +35,7 @@
       <!-- <img src="images/top-pc.png" alt="" /> -->
     </section>
     <section id="skills">
-      <h2>SKILL</h2>
+      <h2>skill</h2>
       <div class="skill-container">
         <div class="skill-box">
           <i class="fab fa-html5"></i>
@@ -59,8 +59,23 @@
         </div>
       </div>
     </section>
+    <section id="portfolio">
+      <h2>portfolio</h2>
+      <div class="works-box">
+        <a href="#">
+          <div class="sample"></div>
+          <div class="works-box-inner">
+            <div class="text-center">
+              <h3>DevLog</h3>
+              <small>2019.07.XX</small>
+              <span class="button-readmore">Read More</span>
+            </div>
+          </div>
+        </a>
+      </div>
+    </section>
     <section id="contact">
-      <h2>CONTACT</h2>
+      <h2>contact</h2>
       <ul>
         <li class="twitter"><a href="#"><i class="fab fa-twitter"></i></a></li>
         <li class="facebook"><a href="#"><i class="fab fa-facebook-square"></i></a></li>
