[update]ポートフォリオエリア終了 #5

--- a/toppage.html
+++ b/toppage.html
@@ -68,7 +68,7 @@
             <div class="text-center">
               <h3>DevLog</h3>
               <small>2019.07.XX</small>
-              <span class="button-readmore">Read More</span>
+              <span class="button-readmore uppercase">Read More</span>
             </div>
           </div>
         </a>
