[update]ブログエリア終了 #6

--- a/toppage.html
+++ b/toppage.html
@@ -31,8 +31,9 @@
 
   <main class="container center">
     <section id="toppic">
-      <div class="sample"></div>
-      <!-- <img src="images/top-pc.png" alt="" /> -->
+      <!-- <div class="sample"></div> -->
+      <img src="images/top-pc.png" alt="" />
+      <p class="right">Soh's<br>Engineer<br>Blog</p>
     </section>
     <section id="skills">
       <h2>skill</h2>
@@ -72,6 +73,32 @@
             </div>
           </div>
         </a>
+      </div>
+    </section>
+    <section id="blog">
+      <h2>blog</h2>
+      <div class="blog-container">
+        <div class="blog-box">
+          <a href="#">
+            <div class="sample"></div>
+            <h3>タイトル</h3>
+            <p class="right"><small>2019.07.XX</small></p>
+          </a>
+        </div>
+        <div class="blog-box">
+          <a href="#">
+            <div class="sample"></div>
+            <h3>タイトル</h3>
+            <p class="right"><small>2019.07.XX</small></p>
+          </a>
+        </div>
+        <div class="blog-box">
+          <a href="#">
+            <div class="sample"></div>
+            <h3>タイトル</h3>
+            <p class="right"><small>2019.07.XX</small></p>
+          </a>
+        </div>
       </div>
     </section>
     <section id="contact">
