--- a/toppage.html
+++ b/toppage.html
@@ -100,6 +100,9 @@
           </a>
         </div>
       </div>
+      <div class="button">
+        <a href="#"><span class="button-readmore uppercase">Read More</span></a>
+      </div>
     </section>
     <section id="contact">
       <h2>contact</h2>
