[update]レスポンシブ対応
headerをレスポンシブ化（動作は未実装）

--- a/toppage.html
+++ b/toppage.html
@@ -18,6 +18,14 @@
         <h1>DevLog</h1>
       </div>
       <div id="nav">
+        <div id="responsive-btn">
+          <span id="menu-btn">
+            <i class="fas fa-bars"></i>
+          </span>
+          <span id="close-btn">
+            <i class="fas fa-times"></i>
+          </span>
+        </div>
         <nav>
           <ul>
             <li><a href="#">PROFILE</a></li>
