[update]レスポンシブ対応
トップ画像まで終了

--- a/toppage.html
+++ b/toppage.html
@@ -39,8 +39,8 @@
 
   <main class="container center">
     <section id="toppic">
-      <!-- <div class="sample"></div> -->
-      <img src="images/top-pc.png" alt="" />
+      <div class="sample"></div>
+      <!-- <img src="images/top-pc.png" alt="" /> -->
       <p class="right">Soh's<br>Engineer<br>Blog</p>
     </section>
     <section id="skills">
