[update]レスポンシブ対応
SKILLゾーンをレスポンシブ化 #24

--- a/toppage.html
+++ b/toppage.html
@@ -39,8 +39,7 @@
 
   <main class="container center">
     <section id="toppic">
-      <div class="sample"></div>
-      <!-- <img src="images/top-pc.png" alt="" /> -->
+      <div class="top-picture"></div>
       <p class="right">Soh's<br>Engineer<br>Blog</p>
     </section>
     <section id="skills">
@@ -49,22 +48,22 @@
         <div class="skill-box">
           <i class="fab fa-html5"></i>
           <h3>HTML/CSS</h3>
-          <p>一二三四五六七八九一一二三四五六七八九二一二三四五六七八九三</p>
+          <p>HTML/CSSでのコーディングができます。このサイトも自分でデザイン・コーディングしております。</p>
         </div>
         <div class="skill-box">
           <i class="fab fa-js"></i>
           <h3>JavaScript</h3>
-          <p>１２３４５６７８９１１２３４５６７８９２１２３４５６７８９３</p>
+          <p>簡単なWebアプリの作成を行えます。まだJavaScript自体もですが、node.js・Vue.jsについても勉強中です。</p>
         </div>
         <div class="skill-box">
           <i class="fab fa-python"></i>
           <h3>Python</h3>
-          <p>１２３４５６７８９１１２３４５６７８９２１２３４５６７８９３</p>
+          <p>業務で使う各種処理を行うプログラムを自作しています。言語処理が得意です。</p>
         </div>
         <div class="skill-box">
           <i class="fab fa-aws"></i>
           <h3>AWS</h3>
-          <p>１２３４５６７８９１１２３４５６７８９２１２３４５６７８９３</p>
+          <p>VPC・EC2・RDS・API Gateway・Lambda・Route53・IAMを使用したことがあります。サーバレスアーキテクチャでRESTful API作成の経験もあります。</p>
         </div>
       </div>
     </section>
