[update]レスポンシブ対応
PORTFOLIOゾーンをレスポンシブ化 #24

--- a/toppage.html
+++ b/toppage.html
@@ -53,7 +53,7 @@
         <div class="skill-box">
           <i class="fab fa-js"></i>
           <h3>JavaScript</h3>
-          <p>簡単なWebアプリの作成を行えます。まだJavaScript自体もですが、node.js・Vue.jsについても勉強中です。</p>
+          <p>簡単なWebアプリの作成を行えます。node.js・Vue.jsについても勉強中です。</p>
         </div>
         <div class="skill-box">
           <i class="fab fa-python"></i>
