[update]レスポンシブ対応
CONTACTゾーンのレスポンシブ化 #24

--- a/toppage.html
+++ b/toppage.html
@@ -30,7 +30,7 @@
           <ul>
             <li><a href="#">PROFILE</a></li>
             <li><a href="#">BLOG</a></li>
-            <li><a href="#">CONTACT</a></li>
+            <li><a href="#contact">CONTACT</a></li>
           </ul>
         </nav>
       </div>
@@ -114,9 +114,9 @@
     <section id="contact">
       <h2>contact</h2>
       <ul>
-        <li class="twitter"><a href="#"><i class="fab fa-twitter"></i></a></li>
-        <li class="facebook"><a href="#"><i class="fab fa-facebook-square"></i></a></li>
-        <li class="github"><a href="#"><i class="fab fa-github"></i></a></li>
+        <li class="twitter"><a href="https://twitter.com/soh_1121_"><i class="fab fa-twitter"></i></a></li>
+        <li class="facebook"><a href="https://www.facebook.com/soichi.sato.16"><i class="fab fa-facebook-square"></i></a></li>
+        <li class="github"><a href="https://github.com/Soh1121"><i class="fab fa-github"></i></a></li>
       </ul>
     </section>
   </main>
