--- a/toppage.html
+++ b/toppage.html
@@ -26,7 +26,7 @@
             <i class="fas fa-times"></i>
           </span>
         </div>
-        <nav>
+        <nav id="menu">
           <ul>
             <li><a href="#">PROFILE</a></li>
             <li><a href="#">BLOG</a></li>
@@ -123,5 +123,6 @@
   <footer>
     <small class="abel uppercase">&copy; Soichi SATO, All Rights Reserved.</small>
   </footer>
+  <script src="script.js"></script>
 </body>
 </html>
