--- a/toppage.html
+++ b/toppage.html
@@ -27,7 +27,7 @@
           </span>
         </div>
         <nav id="menu">
-          <ul>
+          <ul class="menu">
             <li><a href="#">PROFILE</a></li>
             <li><a href="#">BLOG</a></li>
             <li><a href="#contact">CONTACT</a></li>
@@ -123,6 +123,7 @@
   <footer>
     <small class="abel uppercase">&copy; Soichi SATO, All Rights Reserved.</small>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
