--- a/toppage.html
+++ b/toppage.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>DevLog｜Sohのエンジニアブログ</title>
+  <title>DevLog - Sohのエンジニアブログ</title>
   <link rel="stylesheet" href="css/destyle.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/toppage.css">
   <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/879fc12ee5.js"></script>
 
@@ -28,7 +29,7 @@
         </div>
         <nav id="menu">
           <ul class="menu">
-            <li><a href="#">PROFILE</a></li>
+            <li><a href="profile.html">PROFILE</a></li>
             <li><a href="#">BLOG</a></li>
             <li><a href="#contact">CONTACT</a></li>
           </ul>
