[update]プロフィールページのプロフィール部分をコーディング

--- a/profile.html
+++ b/profile.html
@@ -41,6 +41,47 @@
   <main class="container center">
     <section id="profile">
       <h2>Profile</h2>
+      <div class="wrapper">
+        <div class="area" id="pic">
+          <img src="../images/Soh-icon.png" alt="Sohの似顔絵イラスト">
+        </div>
+        <div class="area">
+          <table>
+            <tr>
+              <th>名前</th>
+              <td>Soichi SATO</td>
+            </tr>
+            <tr>
+              <th>出身地</th>
+              <td>青森県青森市</td>
+            </tr>
+            <tr>
+              <th>居住地</th>
+              <td>東京都</td>
+            </tr>
+            <tr>
+              <th>生年月日</th>
+              <td>1989年1月21日</td>
+            </tr>
+            <tr>
+              <th>資格</th>
+              <td>準中型自動車（）</td>
+            </tr>
+            <tr>
+              <th></th>
+              <td>基本情報技術者（）</td>
+            </tr>
+            <tr>
+              <th></th>
+              <td>第一級陸上無線技術士（）</td>
+            </tr>
+            <tr>
+              <th></th>
+              <td>応用情報技術者（）</td>
+            </tr>
+          </table>
+        </div>
+      </div>
     </section>
   </main>
   <footer>
