--- a/profile.html
+++ b/profile.html
@@ -31,7 +31,7 @@
           <ul class="menu">
             <li><a href="profile.html">PROFILE</a></li>
             <li><a href="#">BLOG</a></li>
-            <li><a href="#contact">CONTACT</a></li>
+            <li><a href="toppage.html#contact">CONTACT</a></li>
           </ul>
         </nav>
       </div>
@@ -126,6 +126,46 @@
           <a href="https://www.amazon.co.jp/%E3%80%8C%E3%83%97%E3%83%AD%E3%81%AB%E3%81%AA%E3%82%8B%E3%81%9F%E3%82%81%E3%81%AEWeb%E6%8A%80%E8%A1%93%E5%85%A5%E9%96%80%E3%80%8D-%E2%80%95%E2%80%95%E3%81%AA%E3%81%9C%E3%80%81%E3%81%82%E3%81%AA%E3%81%9F%E3%81%AFWeb%E3%82%B7%E3%82%B9%E3%83%86%E3%83%A0%E3%82%92%E9%96%8B%E7%99%BA%E3%81%A7%E3%81%8D%E3%81%AA%E3%81%84%E3%81%AE%E3%81%8B-%E5%B0%8F%E6%A3%AE-%E8%A3%95%E4%BB%8B/dp/4774142352/ref=pd_sbs_14_2/357-4532857-9704947?_encoding=UTF8&pd_rd_i=4774142352&pd_rd_r=68a2c4a6-5622-449a-b4b0-4fd4456b0329&pd_rd_w=ecJ8n&pd_rd_wg=YdBHL&pf_rd_p=ad2ea29d-ea11-483c-9db2-6b5875bb9b73&pf_rd_r=Z2NPXSAAWYG03XVKT7EM&psc=1&refRID=Z2NPXSAAWYG03XVKT7EM" target="_blank" rel="noopenner">「プロになるためのWeb技術入門」 ――なぜ、あなたはWebシステムを開発できないのか／小森 裕介 著</a>
         </li>
       </ul>
+      </div>
+    </section>
+    <section id="lessons">
+      <h2>List of learned<br>online courses</h2>
+      <div id="techacademy" class="left">
+        <h3>TechAcademy</h3>
+        <ul>
+          <li>
+            <a href="https://techacademy.jp/webdesign-bootcamp" target="_blank" rel="noopenner">Webデザインコース</a>
+          </li>
+          <li>
+            <a href="https://techacademy.jp/wordpress-bootcamp" target="_blank" rel="noopenner">WordPressコース</a>
+          </li>
+        </ul>
+      </div>
+      <div id="udemy" class="left">
+        <h3>Udemy</h3>
+        <ul>
+          <li>
+            <a href="https://www.udemy.com/intro_git/" target="_blank" rel="noopenner">はじめてのGitとGitHub／山浦 清透</a>
+          </li>
+          <li>
+            <a href="https://www.udemy.com/unscared_git/" target="_blank" rel="noopenner">もう怖くないGit！チーム開発で必要なGitを完全マスター／山浦 清透</a>
+          </li>
+          <li>
+            <a href="https://www.udemy.com/5dayslinux/" target="_blank" rel="noopenner">【5日でできる】はじめてのLinux入門（LPIC Level1対応）／井上 博樹</a>
+          </li>
+          <li>
+            <a href="https://www.udemy.com/linux_vps_3days/" target="_blank" rel="noopenner">【3日でできる】はじめてのLinuxサーバー構築入門【CentOS7・PHP７・Docker対応】／井上 博樹</a>
+          </li>
+          <li>
+            <a href="https://www.udemy.com/completeweb2_jp/" target="_blank" rel="noopenner">【世界で30万人が受講】フルスタック・Webエンジニア講座（2017最新版）／井上 博樹</a>
+          </li>
+          <li>
+            <a href="https://www.udemy.com/ruby-bitcoin/" target="_blank" rel="noopenner">Rubyで作る！ビットコイン自動売買システム／Yuki Sako</a>
+          </li>
+          <li>
+            <a href="https://www.udemy.com/ethical-hacking-jpn1/" target="_blank" rel="noopenner">【情報セキュリティ】Ethical Hacking：ホワイトハッカー入門／阿部ひろき</a>
+          </li>
+        </ul>
       </div>
     </section>
   </main>
